--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div>
 
                 <div class = "form">
-                    <img src="banner.jpg" width="364px">
+                    <img src="WhatsApp Image 2022-10-07 at 5.36.29 PM.jpeg" width="364px">
                     
                     <form class="ful">
 
